# aview

./: ANNOUNCE  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.dos  Makefile.in  NEWS  README  README.flip  TODO  aclocal.m4  asciiview  asciiview.1  aview.lsm  config.h.in  configure  configure.in  fli.h  flip.c  flip.lsm  general.c  general.h  image.c  image.h  main.c  shrink.c  shrink.h  sstring.h  ui.c  ui.h
