dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)
AM_INIT_AUTOMAKE(aview, 1.3.0)

use_cc_g_flag=no
AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC

dnl Checks for programs.
AC_PROG_MAKE_SET

dnl Check for AA-lib
AM_PATH_AALIB(1.4.0, , AC_MSG_ERROR([*** AALIB >= 1.4.0 not installed - please install first ***]))
CFLAGS="$CLFAGS $AALIB_CLFAGS"
LIBS="$CLFAGS $AALIB_LIBS"

AC_OUTPUT(Makefile)
